--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 6 * * *'
 
 jobs:
   run-agent:
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install Playwright Browsers
         run: python -m playwright install --with-deps
+      - name: Create Database Directory
+        run: mkdir -p database
 
       - name: Create .env file
         run: |
@@ -45,3 +47,4 @@ jobs:
 
       - name: Run X Publisher
         run: python Publisher/post_x.py
+        
